<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Adam Saturna
  ~  Copyright 2013 Brian Trinh
  ~  Copyright 2013 Ethan Mykytiuk
  ~  Copyright 2013 Prateek Srivastava (@f2prateek)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>

    <string name="app_name">RecipeBot</string>

    <!-- Main Activity !-->
    <string name="menu_search">@string/search</string>
    <string name="menu_add">@string/add</string>

    <!-- Pantry Fragment !-->
    <string name="fragment_pantry_title">Pantry</string>
    <string name="select_all">Select All</string>
    <string name="count_items_selected">%d selected.</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Qty</string>
    <string name="unit">Unit</string>

    <!-- Saved Recipes Fragment !-->
    <string name="fragment_saved_recipes_title">Saved Recipes</string>

    <!-- Add Pantry Item Activity !-->
    <string name="activity_add_pantry_item_title">@string/add</string>

    <!-- Generic words !-->
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="no_pantry_items">Pantry is Empty!</string>
    <string name="no_saved_recipes">No Saved Recipes</string>
    <string name="descr_image">Recipe image</string>
    <string name="recipe_title_hint">Recipe Title</string>
    <string name="hint_edit_text_pantry">Add Pantry Item</string>
    <string name="description_button">Button</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="menu_delete">Delete</string>

    <!-- Recipe Activity !-->
    <string name="menu_camera">Camera</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="enter_directions">Enter Directions</string>
    <string name="enter_tags">Enter Tags</string>
    <string name="menu_save">Save</string>
    <string name="at_least_one_ingredient_required">At least one ingredient required.</string>
    <string name="at_least_one_direction_required">At least one direction required.</string>

    <!-- Misc !-->
    <string name="blank_field">Field should not be left blank.</string>
    <string name="share">Share</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Recipe Description</string>

    <!-- User Activity !-->
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="invalid">Invalid</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="recipe_deleted">Recipe Deleted</string>
    <string name="menu_edit">Edit</string>
    <string name="direction">Direction</string>
    <string name="tags">Tags</string>
    <string name="search_ingredients">Search By Ingredients</string>
    <string name="recipe_saved">Recipe Saved.</string>
    <string name="pantry_item_deleted">Ingredient deleted from pantry</string>
    <string name="hello_user">Hello %s</string>
    <string name="no_results_found">No Results</string>
    <string name="invalid_file">Invalid File!</string>

</resources>