<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Adam Saturna
  ~  Copyright 2013 Brian Trinh
  ~  Copyright 2013 Ethan Mykytiuk
  ~  Copyright 2013 Prateek Srivastava (@f2prateek)
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<com.cmput301.recipebot.ui.HorizontalScrollableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                          android:orientation="vertical"
                                                          android:layout_width="match_parent"
                                                          android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
                android:id="@+id/pager_recipe_images"
                android:layout_width="fill_parent"
                android:layout_height="200dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_recipe_name"
                android:hint="@string/recipe_name"
                android:layout_gravity="left|center_vertical"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_recipe_description"
                android:hint="@string/recipe_description"
                android:layout_gravity="left|center_vertical"/>


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/ingredient"
                  style="@style/Label"
                />
        <include layout="@layout/add_ingredient_widget"
                 android:visibility="gone"/>

        <LinearLayout android:layout_width="match_parent"
                      android:id="@+id/list_ingredients"
                      android:orientation="vertical"
                      android:layout_height="wrap_content"/>


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/direction"
                  style="@style/Label"
                />
        <include layout="@layout/add_direction_widget"
                 android:visibility="gone"/>

        <LinearLayout android:layout_width="match_parent"
                      android:id="@+id/list_directions"
                      android:orientation="vertical"
                      android:layout_height="wrap_content"/>


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/tags"
                  style="@style/Label"
                />

        <include layout="@layout/add_tag_widget"
                 android:visibility="gone"/>

        <LinearLayout android:layout_width="match_parent"
                      android:id="@+id/list_tags"
                      android:orientation="vertical"
                      android:layout_height="wrap_content"/>

    </LinearLayout>

</com.cmput301.recipebot.ui.HorizontalScrollableScrollView>