<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/menu_search"
            android:id="@+id/search_button"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="700dp" />

    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients_box" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:clickable="false" android:maxLines="1"
            android:inputType="text" android:layout_marginTop="50dp"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_add"
            android:id="@+id/add_button"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="497dp"
            android:layout_height="1032dp"
            android:id="@+id/checkBox_LinearLayout"
            android:layout_alignLeft="@+id/add_button" android:layout_alignParentTop="true"
            android:layout_marginTop="210dp">
    </LinearLayout>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:id="@+id/checkBoxAll" android:layout_gravity="left|center_vertical" android:checked="false"
            android:layout_alignLeft="@+id/add_button" android:layout_alignParentTop="true"
            android:layout_marginTop="160dp"/>

</RelativeLayout>